Fix bug cutting off results display

--- a/src/e-ducation-front-end/src/app/promptlet/results-display/results-display.component.css
+++ b/src/e-ducation-front-end/src/app/promptlet/results-display/results-display.component.css
@@ -11,3 +11,8 @@
   margin-left: 3rem;
   margin-right: 4rem;
 }
+
+.result-body{
+  overflow:hidden;
+  margin-bottom: 2rem;
+}
